tests/specs/run/_038_checkjs/038_checkjs.js.out
[WILDCARD]
TS2552 [ERROR]: Cannot find name 'consol'. Did you mean 'console'?
consol.log("hello world!");
~~~~~~
    at [WILDCARD]/038_checkjs.js:2:1

TS2552 [ERROR]: Cannot find name 'Foo'. Did you mean 'foo'?
const foo = new Foo();
                ~~~
    at [WILDCARD]/038_checkjs.js:5:17

Found 2 errors.

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
